--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>Jacob Nunes</title>
+    <meta name="description" content="Jacob Nunes — Backend / Systems / Game Programmer. Resume and short bio.">
+  </head>
 
-<head>
-    <title>Site</title>
-</head>
+  <body>
+    <center>
+      <h1>Jacob Nunes</h1>
+      <h4>----------------------------------------------------------------------------</h3>
+      <p>
+        <a href="resume.pdf">[ Resume (PDF) ]</a> |
+        <a href="mailto:jacobanunes@gmail.com">[ Email ]</a> |
+        <a href="https://github.com/jaken00">[ GitHub ]</a>
+      </p>
+    </center>
 
-<body>
-    <h2>Site</h2>
+    <hr noshade>
+
+    <h2>About Me</h2>
     <p>
-        Site
+      I'm interested in systems programming, game engines, and the design of large-scale MMOs and virtual worlds.
+      I like exploring the history of game development and rebuilding classic engine techniques to understand how they worked.
+      My goal is to help create persistent virtual worlds that others can explore and shape.
     </p>
-</body>
+    <p>
+      Languages I use: C, Python, Go, SQL
+    </p>
 
+    <hr noshade>
+
+    <address>
+      Last updated: 2025-11-12 • Hosted on GitHub Pages • <a href="/">jacobnunes.xyz</a>
+    </address>
+  </body>
 </html>
