cleaning meta name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Jacob Nunes</title>
-    <meta name="description" content="Jacob Nunes — Backend / Systems / Game Programmer. Resume and short bio.">
+    <meta name="description" content="Jacob Nunes Resume and short bio.">
   </head>
 
   <body>
