--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
       Languages I use: Python, C, Go, SQL
     </p>
 
+    <h2>Projects</h2>
+    <ul>
+    <li>
+      <p>Currently Working on: Aethermoor
+        <br>
+        Aethermoor is an attempt to create a persistant world simulation with entities (mobs, players, factions, empires) that follow a need based descsion tree that results in
+        stores, wars, poltiics and the creation of legendary items. This attempt with use an AI narrator to digest the events that occur over ticks of the game world in order to 
+        illustrate the complex simulation occuring and emergant unscripted content. The project uses Go to build the world simulation.
+      </p>
+      <a href="https://github.com/jaken00/aethermoor">Track Progress Here</a>
+      
+
+    </li>
+
+      <li>
+        <p>Rat Chase</p>
+        <a href="https://github.com/jaken00/Rat-Chase">Rat Chase: A LundumGame Jam game created using Pygame in 48 hours</a>
+      </li>
+      <li>
+        <p>Vow</p>
+        <a href="https://github.com/jaken00/vow">A CLI todo with local SQLite storage in Go</a>
+      </li>
+    </ul>
+
     <hr noshade>
 
     <h2>Snake Game | Controls: WASD</h2>
